--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "multer": "^1.4.5-lts.1",
     "simple-auth-connection": "^1.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
     "nodemon": "^3.1.4"
   },
